--- a/pipelines/gomegamatchers.yml
+++ b/pipelines/gomegamatchers.yml
@@ -3,6 +3,13 @@ groups:
   jobs:
   - test-gomegamatchers
 
+resource_types:
+- name: slack-notification
+  type: docker-image
+  source:
+    repository: cfcommunity/slack-notification-resource
+    tag: latest
+
 resources:
 - name: gomegamatchers
   type: git
@@ -14,6 +21,10 @@ resources:
   source:
     branch: master
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
+- name: slack-alert
+  type: slack-notification
+  source:
+    url: https://hooks.slack.com/services/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
 
 jobs:
 - name: test-gomegamatchers
@@ -26,3 +37,10 @@ jobs:
       trigger: true
   - task: test
     file: ci/scripts/gomegamatchers/task.yml
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
