--- a/pipelines/bosh-deployment.yml
+++ b/pipelines/bosh-deployment.yml
@@ -62,6 +62,13 @@ jobs:
       trigger: true
   - task: commit-bosh-deployment-change
     file: ci/scripts/bosh-deployment/commit-bosh-deployment-change/task.yml
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
   - put: bosh-bootloader-develop
     resource: bosh-bootloader-develop
     params:
@@ -80,6 +87,13 @@ jobs:
       trigger: true
   - task: update-bosh-deployment-submodule
     file: ci/scripts/bosh-deployment/update-bosh-deployment-submodule/task.yml
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
   - put: bump-bosh-deployment-ci
     resource: bosh-bootloader-bump-bosh-deployment-ci
     params:
@@ -102,7 +116,7 @@ jobs:
       put: slack-alert
       params:
         text: |
-            ['bosh-deployment/test-bosh-bootloader'] failed:
+            [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
 
             https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
 
@@ -132,7 +146,7 @@ jobs:
       - put: slack-alert
         params:
           text: |
-            ['bosh-deployment/aws-integration-tests'] failed:
+            [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
 
             https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
 
@@ -163,6 +177,6 @@ jobs:
       - put: slack-alert
         params:
           text: |
-            ['bosh-deployment/gcp-integration-tests'] failed:
+            [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
 
             https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
