--- a/scripts/run-consats/fixtures/example.yml
+++ b/scripts/run-consats/fixtures/example.yml
@@ -28,10 +28,10 @@ properties:
   consul:
     acceptance_tests:
       bosh:
-        target: BOSH_DIRECTOR
-        username: BOSH_USER
-        password: BOSH_PASSWORD
-        director_ca_cert: BOSH_DIRECTOR_CA_CERT
+        target: BOSH_ENVIRONMENT
+        username: BOSH_CLIENT
+        password: BOSH_CLIENT_SECRET
+        director_ca_cert: BOSH_CA_CERT
       parallel_nodes: 1
       consul_release_version: CONSUL_RELEASE_VERSION
       latest_consul_release_version: LATEST_CONSUL_RELEASE_VERSION
