Create cleanup-bbl-environment job
- deletes any bbl environments created by integration tests
- deletes bbl state on s3

[#141969233]

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -20,6 +20,9 @@ groups:
   - minor
   - patch
   - github-release
+- name: cleanup
+  jobs:
+  - cleanup-bbl-environments
 
 resource_types:
 - name: slack-notification
@@ -442,3 +445,16 @@ jobs:
       commitish: builds/commitish
       globs:
       - builds/bin/bbl-*
+
+# Cleanup
+- name: cleanup-bbl-environments
+  serial: true
+  public: true
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bosh-bootloader
+      resource: bosh-bootloader-develop
+  - task: test
+    file: ci/scripts/bosh-bootloader/cleanup-bbl-environments/task.yml
