--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -9,6 +9,7 @@ groups:
   - consats-windows
   - consats-windows-turbulence
   - deploy-with-cf
+  - deploy-with-cf-deployment
   - deploy-with-diego
   - run-cats
   - delete-cf-deployments
@@ -26,6 +27,8 @@ groups:
   - teardown-consats-linux-infrastructure
   - setup-consats-windows-infrastructure
   - teardown-consats-windows-infrastructure
+  - setup-cf-deployment-infrastructure
+  - teardown-cf-deployment-infrastructure
 
 resource_types:
 - name: slack-notification
@@ -40,6 +43,18 @@ resources:
   source:
     branch: master
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
+
+- name: cf-deployment
+  type: git
+  source:
+    branch: master
+    uri: https://github.com/cloudfoundry/cf-deployment.git
+
+- name: cf-deployment-concourse-tasks
+  type: git
+  source:
+    branch: master
+    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
 
 - name: consul-release-develop
   type: git
@@ -137,6 +152,10 @@ resources:
   type: slack-notification
   source:
     url: https://hooks.slack.com/services/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
+
+- name: empty-ops-files
+  type: time
+  source: {interval: 5m}
 
 jobs:
 - name: check-git-submodules
@@ -306,6 +325,47 @@ jobs:
       PARALLEL_NODES: 3
       ENABLE_TURBULENCE_TESTS: true
       WINDOWS_CLIENTS: true
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
+- name: deploy-with-cf-deployment
+  public: true
+  serial_groups: [cf-deployment]
+  plan:
+  - aggregate:
+    - get: bbl-state
+      resource: infrastructure-ci-bbl-states
+    - get: cf-deployment
+    - get: cf-deployment-concourse-tasks
+    - get: ops-files
+      resource: empty-ops-files
+    - get: release
+      resource: consul-release-develop
+      passed: [consats-linux-turbulence, consats-windows-turbulence]
+      trigger: true
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
+  - task: upload-stemcell
+    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+    params:
+      BBL_STATE_DIR: consul-cf-deployment
+  - task: deploy
+    file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
+    params:
+      BBL_STATE_DIR: consul-cf-deployment
+      SYSTEM_DOMAIN: consul-cf-deployment.infrastructure.cf-app.com
+      VARS_STORE_FILE: consul-cf-deployment/deployment-vars.yml
+    ensure:
+      do:
+      - task: delete-cf-deployment
+        file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
+        params:
+          BBL_STATE_DIR: consul-cf-deployment
     on_failure:
       put: slack-alert
       params:
@@ -589,7 +649,6 @@ jobs:
           https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
 
 # Infrastructure
-
 - name: setup-consats-linux-infrastructure
   public: true
   serial: true
@@ -699,6 +758,68 @@ jobs:
     file: ci/scripts/infrastructure/bbl-destroy/task.yml
     params:
       BBL_STATE_DIR: consats-windows
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: bbl-states-repo-out
+        rebase: true
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
+- name: setup-cf-deployment-infrastructure
+  public: true
+  serial: true
+  serial_groups: [cf-deployment]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+  - task: bbl-up
+    file: ci/scripts/infrastructure/bbl-up/task.yml
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+      BBL_GCP_REGION: {{gcp_region}}
+      BBL_GCP_ZONE: {{gcp_zone}}
+      BBL_STATE_DIR: consul-cf-deployment
+      BBL_NAME: consul-cf-deployment
+      LB_DOMAIN: consul-cf-deployment.infrastructure.cf-app.com
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: bbl-states-repo-out
+        rebase: true
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
+- name: teardown-cf-deployment-infrastructure
+  public: true
+  serial: true
+  serial_groups: [cf-deployment]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+      passed:
+      - setup-cf-deployment-infrastructure
+  - task: bbl-destroy
+    file: ci/scripts/infrastructure/bbl-destroy/task.yml
+    params:
+      BBL_STATE_DIR: consul-cf-deployment
     ensure:
       put: infrastructure-ci-bbl-states
       params:
