Fix go install path to install bbl develop
- in cleanup-bbl-environments

[#141969233]

Signed-off-by: Dave Walter <dwalter@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -456,5 +456,5 @@ jobs:
       resource: infrastructure-ci
     - get: bosh-bootloader
       resource: bosh-bootloader-develop
-  - task: test
+  - task: cleanup
     file: ci/scripts/bosh-bootloader/cleanup-bbl-environments/task.yml
