cleanup-bbl-environment task should take in
- aws environment variables

[#141969233]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/scripts/bosh-bootloader/cleanup-bbl-environments/task.yml
+++ b/scripts/bosh-bootloader/cleanup-bbl-environments/task.yml
@@ -12,3 +12,8 @@ inputs:
 
 run:
   path: ci/scripts/bosh-bootloader/cleanup-bbl-environments/task
+
+params:
+  AWS_DEFAULT_REGION:
+  AWS_ACCESS_KEY_ID:
+  AWS_SECRET_ACCESS_KEY:
