--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -56,7 +56,7 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
+    uri: https://github.com/davewalter/cf-deployment-concourse-tasks.git
 
 - name: consul-release-develop
   type: git
@@ -411,12 +411,25 @@ jobs:
     file: cf-deployment-concourse-tasks/update-integration-configs/task.yml
     params:
       CATS_INTEGRATION_CONFIG_FILE: artifacts/cats_config.json
+      VARS_STORE_FILE: consul-cf-deployment/deployment-vars.yml
       SYSTEM_DOMAIN: consul-cf-deployment.infrastructure.cf-app.com
   - task: run-cats
     file: cats-concourse-task/task.yml
     input_mapping: {integration-config: updated-integration-configs }
     params:
       CONFIG_FILE_PATH: artifacts/cats_config.json
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+  - put: slack-alert
+    params:
+      icon_emoji: ":white_check_mark:"
+      text: |
+        [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] passed!
 
 - name: delete-cf-deployment
   public: true
