Create draft of bbl-release
[#141829499]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -75,6 +75,7 @@ resources:
     user: cloudfoundry
     repository: bosh-bootloader
     access_token: {{cf_infra_bot_user_github_access_token}}
+    drafts: true
 - name: terraform
   type: github-release
   source:
