Add bosh-deployment commit sha to release body
[#137733507]

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -444,6 +444,7 @@ jobs:
       name: builds/name
       tag: builds/name
       commitish: builds/commitish
+      body: builds/body
       globs:
       - builds/bin/bbl-*
 
