fix run-eats task input
- latest-consul-release should be latest-etcd-release

[#133861045]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/scripts/etcd/run-eats/task.yml
+++ b/scripts/etcd/run-eats/task.yml
@@ -11,7 +11,7 @@ inputs:
   - name: etcd-release
   - name: stemcell
   - name: turbulence-release
-  - name: latest-consul-release
+  - name: latest-etcd-release
   - name: bbl-states-repo
 
 run:
