Add consul-release resource to run-eats
[#142530851 #133861045]

Signed-off-by: Rizwan Reza <rreza@pivotal.io>

--- a/scripts/etcd/run-eats/task.yml
+++ b/scripts/etcd/run-eats/task.yml
@@ -9,6 +9,7 @@ image_resource:
 inputs:
   - name: ci
   - name: etcd-release
+  - name: consul-release
   - name: stemcell
   - name: turbulence-release
   - name: latest-etcd-release
