--- a/scripts/infrastructure-ci/run-tests/task.yml
+++ b/scripts/infrastructure-ci/run-tests/task.yml
@@ -7,7 +7,7 @@ image_resource:
     repository: cfinfrastructure/golang
 
 inputs:
-- name: infrastructure-ci
+- name: ci
 
 run:
-  path: infrastructure-ci/scripts/infrastructure-ci/task
+  path: ci/scripts/infrastructure-ci/task
