--- a/pipelines/infrastructure-ci.yml
+++ b/pipelines/infrastructure-ci.yml
@@ -28,6 +28,8 @@ resources:
     uri: git@github.com:cloudfoundry/infrastructure-ci-bbl-states.git
     private_key: {{cf_infra_bot_user_github_private_key}}
     branch: master
+    paths:
+    - ci-workers
 - name: concourse-windows-fork
   type: git
   source:
@@ -96,6 +98,8 @@ jobs:
       resource: infrastructure-ci
     - get: bbl-states-repo
       resource: infrastructure-ci-bbl-states
+      passed: [setup-worker-infrastructure]
+      trigger: true
     - get: windows-stemcell
     - get: concourse-windows
       resource: concourse-windows-fork
